--- a/StudentMaster.API/StudentMaster.API/appsettings.json
+++ b/StudentMaster.API/StudentMaster.API/appsettings.json
@@ -15,8 +15,8 @@
   },
   "Uploads": "Uploads",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=StudentMasterDB;Trusted_Connection=True;"
-    // "DefaultConnection": "Server=tcp:studentmasterdbserver.database.windows.net,1433;Initial Catalog=StudentMasterTest_db;Persist Security Info=False;User ID=adminuser;Password=5358254AaV;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    // "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=StudentMasterDB;Trusted_Connection=True;"
+    "DefaultConnection": "Server=tcp:studentmasterdbserver.database.windows.net,1433;Initial Catalog=StudentMasterDB;Persist Security Info=False;User ID=StudentMasterGroup;Password=5358254AaV;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "AllowedHosts": "*"
 }
