--- a/StudentMaster.API/StudentMaster.API/StudentMaster.API.csproj
+++ b/StudentMaster.API/StudentMaster.API/StudentMaster.API.csproj
@@ -24,5 +24,7 @@
     <ProjectReference Include="..\StudentMaster.DAL\StudentMaster.DAL.csproj" />
   </ItemGroup>
 
+  <ProjectExtensions><VisualStudio><UserProperties appsettings_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
+
 
 </Project>
