added email service

--- a/StudentMaster.API/StudentMaster.API/appsettings.json
+++ b/StudentMaster.API/StudentMaster.API/appsettings.json
@@ -18,5 +18,14 @@
     // "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=StudentMasterDB;Trusted_Connection=True;"
     "DefaultConnection": "Server=tcp:studentmasterdbserver.database.windows.net,1433;Initial Catalog=StudentMasterDB;Persist Security Info=False;User ID=StudentMasterGroup;Password=5358254AaV;MultipleActiveResultSets=true;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
+  "MailService": {
+    "FROM": "StudentMaster's Bot", // From whom the email will be sent
+    "SERVER": "smtp.gmail.com", // Server
+    "PORT": "465", // PORT
+    "UseSSL": "true", // Use ssl? [true or false]
+    "EMAIL": "studentbookmailservice@gmail.com", // mail that will be used to send a message
+    "PASSWORD": "5358254AaV", // password from the mail that will be used to send the message
+    "EMAIL_FOOTER": "@2020 - StudentMaster. POWERED BY PSYHO-TEAM"
+  },
   "AllowedHosts": "*"
 }
