--- a/StudentMaster.Client/package.json
+++ b/StudentMaster.Client/package.json
@@ -15,53 +15,53 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~9.0.0-rc.7",
+    "@angular/animations": "^9.0.0",
     "@angular/cdk": "~8.2.1",
-    "@angular/common": "~9.0.0-rc.7",
-    "@angular/compiler": "~9.0.0-rc.7",
-    "@angular/core": "~9.0.0-rc.7",
+    "@angular/common": "^9.0.0",
+    "@angular/compiler": "^9.0.0",
+    "@angular/core": "^9.0.0",
     "@angular/flex-layout": "~8.0.0-beta.27",
-    "@angular/forms": "~9.0.0-rc.7",
+    "@angular/forms": "^9.0.0",
     "@angular/material": "~8.2.1",
-    "@angular/platform-browser": "~9.0.0-rc.7",
-    "@angular/platform-browser-dynamic": "~9.0.0-rc.7",
-    "@angular/pwa": "^0.803.21",
-    "@angular/router": "~9.0.0-rc.7",
+    "@angular/platform-browser": "^9.0.0",
+    "@angular/platform-browser-dynamic": "^9.0.0",
+    "@angular/pwa": "^0.803.25",
+    "@angular/router": "^9.0.0",
     "@auth0/angular-jwt": "^3.0.0",
-    "@ng-matero/extensions": "^0.4.0",
-    "@ng-select/ng-select": "^3.6.1",
+    "@ng-matero/extensions": "^0.4.1",
+    "@ng-select/ng-select": "^3.7.2",
     "@ngrx/effects": "^8.6.0",
     "@ngrx/router-store": "^8.6.0",
     "@ngrx/store": "^8.6.0",
     "@ngrx/store-devtools": "^8.6.0",
-    "@ngx-formly/core": "^5.5.5",
-    "@ngx-formly/material": "^5.5.5",
+    "@ngx-formly/core": "^5.5.11",
+    "@ngx-formly/material": "^5.5.11",
     "@ngx-progressbar/core": "~5.3.2",
     "@ngx-progressbar/router": "~5.3.2",
     "@ngx-translate/core": "~11.0.1",
     "@ngx-translate/http-loader": "~4.0.0",
-    "apexcharts": "^3.11.2",
+    "apexcharts": "^3.15.5",
     "hammerjs": "^2.0.8",
-    "ng-apexcharts": "^1.1.2",
+    "ng-apexcharts": "^1.2.0",
     "ng-matero": "^0.10.1",
-    "ngx-image-cropper": "^2.0.2",
+    "ngx-image-cropper": "^2.1.2",
     "ngx-spinner": "^8.1.0",
-    "ngx-toastr": "^11.2.1",
+    "ngx-toastr": "^11.3.3",
     "photoviewer": "^3.4.0",
-    "rxjs": "~6.5.3",
+    "rxjs": "^6.5.4",
     "screenfull": "^4.2.1",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.900.0-rc.7",
-    "@angular/cli": "~9.0.0-rc.7",
-    "@angular/compiler-cli": "~9.0.0-rc.7",
-    "@angular/language-service": "~9.0.0-rc.7",
+    "@angular-devkit/build-angular": "^0.900.1",
+    "@angular/cli": "^9.0.1",
+    "@angular/compiler-cli": "^9.0.0",
+    "@angular/language-service": "^9.0.0",
     "@angularclass/hmr": "^2.1.3",
-    "@types/jasmine": "~3.5.0",
+    "@types/jasmine": "^3.5.3",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.11.1",
+    "@types/node": "^12.12.27",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
@@ -69,17 +69,17 @@
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~2.1.0",
     "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.2",
+    "karma-jasmine-html-reporter": "^1.5.2",
     "parse5": "~5.1.0",
     "prettier": "1.18.2",
     "prettier-stylelint": "^0.4.2",
-    "protractor": "~5.4.2",
+    "protractor": "^5.4.3",
     "stylelint": "^10.1.0",
     "stylelint-config-recommended-scss": "^3.3.0",
     "stylelint-config-standard": "^18.3.0",
-    "stylelint-scss": "^3.9.2",
+    "stylelint-scss": "^3.14.2",
     "ts-node": "~8.3.0",
     "tslint": "~5.18.0",
-    "typescript": "~3.6.4"
+    "typescript": "^3.7.5"
   }
 }
