--- a/StudentMaster.Client/package.json
+++ b/StudentMaster.Client/package.json
@@ -27,6 +27,7 @@
     "@angular/platform-browser-dynamic": "^9.0.0",
     "@angular/pwa": "^0.900.1",
     "@angular/router": "^9.0.0",
+    "@aspnet/signalr": "^1.1.4",
     "@auth0/angular-jwt": "^3.0.0",
     "@ng-matero/extensions": "^0.4.1",
     "@ng-select/ng-select": "^3.7.2",
