--- a/StudentMaster.API/StudentMaster.API/StudentMaster.API.csproj
+++ b/StudentMaster.API/StudentMaster.API/StudentMaster.API.csproj
@@ -5,6 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20200313153703_homeworkmodelupd.cs" />
+    <Compile Remove="Migrations\20200313153703_homeworkmodelupd.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="3.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.1" />
